[tool.poetry]
name = "wan-shi-tong"
version = "0.1.0"
description = "CVE/CPE project"
authors = ["Noland Seigler"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
dash = "^1.14.0"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
