[tool.poetry]
name = "wan_shi_tong"
version = "0.1.0"
description = "CVE/CPE project"
authors = ["Noland Seigler"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
dash = "^2.15.0"
pandas = "^1.1.1"
python-dotenv = "^0.14.0"
Flask-SQLAlchemy = "^2.4.4"
pg8000 = "^1.16.5"
requests = "^2.24.0"
prefect = "^0.15.4"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^19.10b0"
pytest = "^6.0.1"
pylint-flask = "^0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
